# src/controller/quizz.controller.js
@@ -25,22 +25,26 @@ exports.createQuizzName = async (req, res) => {
 }
 
 
-exports.createQuizz = async (req, res) => {
+exports.createQuizzcontent = async (req, res) => {
     try {
-        const quizzId = req.params.id
-        const findQuizz = await QuizzName.findOne({ quizzId: quizzId })
-        if (!findQuizz) {
+        const userId = req.user._id
+        const findQuizzName = await QuizzName.findOne({ userId: userId })
+        if (!findQuizzName) {
             res.status(201).json({ message: "please create a quizz" })
+        }else{
+            const quizzIdCheck = await QuizzContent.findOne({ quizzId: findQuizzName._id })
+            if (quizzIdCheck) {
+                res.status(201).json({ message: "quiz is already created for user. Please update quizz" })
+            } else {
+                const quizzContent= [{id:req.body.id,question:req.body.question,answer:req.body.answer}]
+                const quizz = { quizzContent:quizzContent, quizzId: findQuizzName._id }
+                console.log("user",req.body)
+                console.log("quizz", quizzContent)
+                const createQuizz = await QuizzContent.create(quizz)
+                res.status(200).json(createQuizz)
+            }
         }
-        const quizzIdCheck = await QuizzContent.findOne({ quizzId: quizzId })
-        if (quizzIdCheck) {
-            res.status(201).json({ message: "quiz is already created. Please update quizz" })
-        } else {
-            const quizzContent = { quizzContent: req.body.quizzContent, quizzId: req.params.id }
-            console.log("quizz", quizzId)
-            const createQuizz = await QuizzContent.create(quizzContent)
-            res.status(200).json(createQuizz)
-        }
+      
 
         // const findQuizzName= await QuizzName.find
 
@@ -49,55 +53,72 @@ exports.createQuizz = async (req, res) => {
 
 }
 
-
+//  updating question
 exports.updateQuizzContent = async (req, res) => {
     try {
 
         const userId = req.user._id
-        const idForUpdate = req.params.id
+        const idForUpdate = req.params.quizzId
         const findQuizz = await QuizzName.findOne({ _id: idForUpdate })
-        if (userId !== findQuizz.userId) {
+        // console.log("userId",userId)
+        if (userId == !findQuizz.userId) {
             res.status(201).json({ message: "you are not authorized to update" })
-        }
-        const updateQuizz = await QuizzContent.findByIdAndUpdate(
-            { quizzId: findQuizz.quizzId },
-            {
-                $push: {
-                    quizzContent: { question: req.body.question, answer: req.body.answer }
-                }
-            }
-        )
+        }else{
 
-        res.status(200).json(updateQuizz)
+            const quizzContent= [{id:req.body.id,question:req.body.question,answer:req.body.answer}]
+            const QuizzContantId= await QuizzContent.findOne( { quizzId: findQuizz._id })
+            // console.log(await QuizzContent.findOne( { quizzId: findQuizz._id }))
+            const updateQuizz = await QuizzContent.findByIdAndUpdate(
+                { _id:QuizzContantId._id },
+                {
+                    $push:{"quizzContent":quizzContent},
+                   
+                },
+                { new: true },
+                
+                )
+                console.log("findQuizz",updateQuizz)
+    
+            res.status(200).json(updateQuizz)
+        }
+       
 
     } catch { e => e }
 
 }
 
+//  controller for delete quizz
 
 exports.deleteQuizz = async (req, res) => {
     const quizzId = req.params.id
     const userId= req.user._id
 
     const findContentWithId = await QuizzName.findOne({ _id: quizzId })
-    if(findContentWithId.userId==userId){
+    console.log("userod",userId)
+    console.log("quizzId",findContentWithId.userId)
+    if(findContentWithId.userId==!userId){
+        res.status(201).json({message:"you are not authrized to change"})
+        
+    }else{
         if (!findContentWithId) {
             res.status(201).json({ message: "Quiz does not exist" })
         } else {
-            const deleteContent = await QuizzContent.findByIdAndDelete({ quizzId: quizzId })
+            const quizzContent= await QuizzContent.findOne({quizzId:quizzId})
+            const deleteContent = await QuizzContent.findByIdAndDelete({ _id: quizzContent._id })
             if (deleteContent) {
                 const findQuizz = await QuizzName.findByIdAndDelete({ _id: quizzId })
                 res.status(200).json({ message: "quizz delete succesfully" })
             }
         }
-    }else{
-        res.status(201).json({message:"you are not authrized to change"})
+        
     }
 
 }
 
 exports.allQuizzes= async (req,res)=>{
-    const allQuizzes= await QuizzName.find()
+    const quizzId= req.params.quizzId
+    
+    const allQuizzes= await QuizzContent.findOne({quizzId:quizzId})
     res.status(200).json(allQuizzes)
 }
 
